# oxidized-cell

./: .gitignore  BUILD.md  BUILD_SUMMARY.md  BUILD_TEST_REPORT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  PHASE11_PROGRESS.md  PHASE13_COMPLETION.md  PHASE14_COMPLETION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  VULKAN_BACKEND_IMPLEMENTATION.md  build-windows.sh  build.ps1  build.sh  config.toml.example  todo.md
.cargo/: config.toml
.github/workflows/: ci.yml  cross-compile.yml  llvm-build.yml
cpp/: CMakeLists.txt
cpp/include/: oc_ffi.h  oc_threading.h
cpp/src/: atomics.cpp  dma.cpp  ppu_jit.cpp  rsx_shaders.cpp  simd_avx.cpp  spu_jit.cpp
crates/oc-audio/: Cargo.toml
crates/oc-audio/src/: cell_audio.rs  codec.rs  lib.rs  mixer.rs  resampler.rs  spdif.rs  time_stretch.rs
crates/oc-audio/src/backend/: cpal_backend.rs  mod.rs
crates/oc-core/: Cargo.toml
crates/oc-core/src/: config.rs  error.rs  lib.rs  rsx_bridge.rs  scheduler.rs  spu_bridge.rs
crates/oc-debug/src/: ppu_debugger.rs  profiler.rs  rsx_debugger.rs  spu_debugger.rs
crates/oc-ffi/: build.rs
crates/oc-ffi/src/: atomics.rs  dma.rs  jit.rs  lib.rs  simd.rs
crates/oc-hle/: Cargo.toml  README.md
crates/oc-hle/src/: cell_adec.rs  cell_audio.rs  cell_dmux.rs  cell_font.rs  cell_font_ft.rs  cell_fs.rs  cell_game.rs  cell_gcm_sys.rs  cell_gif_dec.rs  cell_http.rs  cell_jpg_dec.rs  cell_kb.rs  cell_mic.rs  cell_mouse.rs  cell_net_ctl.rs  cell_pad.rs  cell_png_dec.rs  cell_resc.rs  cell_save_data.rs  cell_spurs.rs  cell_spurs_jq.rs  cell_ssl.rs  cell_sysutil.rs  cell_vdec.rs  cell_vpost.rs  context.rs  dispatcher.rs  lib.rs  libsre.rs  memory.rs  module.rs  spu_runtime.rs
crates/oc-input/src/: bluetooth.rs  camera.rs  dualshock3.rs  instruments.rs  keyboard.rs  mapping.rs  microphone.rs  mouse.rs  move_controller.rs  pad.rs  usb.rs
crates/oc-integration/: Cargo.toml
crates/oc-integration/examples/: game_loading.rs  integration_demo.rs
crates/oc-integration/src/: lib.rs  loader.rs  pipeline.rs  runner.rs
crates/oc-loader/: Cargo.toml
crates/oc-loader/src/: crypto.rs  elf.rs  firmware.rs  lib.rs  pkg.rs  prx.rs  self_file.rs
crates/oc-lv2/: Cargo.toml
crates/oc-lv2/src/: fs.rs  lib.rs  memory.rs  objects.rs  process.rs  prx.rs  spu.rs  syscall.rs  syscall_numbers.rs  thread.rs  time.rs  timer.rs
crates/oc-lv2/src/sync/: barrier.rs  cond.rs  event.rs  event_flag.rs  mod.rs  mutex.rs  rwlock.rs  semaphore.rs
crates/oc-memory/: README.md  TESTING.md
crates/oc-memory/benches/: memory_benchmarks.rs
crates/oc-memory/src/: debug.rs  lib.rs  manager.rs  pages.rs
crates/oc-memory/tests/: reservation_tests.rs  stress_tests.rs
crates/oc-ppu/: Cargo.toml
crates/oc-ppu/src/: decoder.rs  interpreter.rs  lib.rs  thread.rs
crates/oc-ppu/src/instructions/: branch.rs  float.rs  integer.rs  load_store.rs  system.rs  vector.rs
crates/oc-rsx/: Cargo.toml
crates/oc-rsx/src/: buffer.rs  lib.rs  methods.rs  postprocess.rs  scaling.rs  shader.rs  shader_legacy.rs  state.rs  texture.rs  thread.rs  timing.rs  vertex.rs
crates/oc-rsx/src/backend/: mod.rs  null.rs  vulkan.rs
crates/oc-rsx/src/shader/: cache.rs  fp_decode.rs  mod.rs  spirv_gen.rs  types.rs  vp_decode.rs
crates/oc-spu/src/: channels.rs  decoder.rs  interpreter.rs  lib.rs  mfc.rs  thread.rs
crates/oc-spu/src/instructions/: arithmetic.rs  branch.rs  channel.rs  compare.rs  control.rs  float.rs  hints.rs  logical.rs  memory.rs  mod.rs  quadword.rs
crates/oc-spu/tests/: synchronization.rs
crates/oc-ui/: Cargo.toml
crates/oc-ui/src/: app.rs  controller_config.rs  debugger.rs  game_list.rs  lib.rs  log_viewer.rs  memory_viewer.rs  settings.rs  themes.rs
crates/oc-vfs/: Cargo.toml
crates/oc-vfs/src/: disc.rs  lib.rs  savedata.rs  users.rs
crates/oc-vfs/src/devices/: bdvd.rs  flash.rs  hdd.rs  usb.rs
crates/oc-vfs/src/formats/: iso.rs  mod.rs  pkg.rs  sfo.rs
docs/: CPP_OVERVIEW.md  HARDWARE_CONFIG.md  HLE_STATUS.md  phase2-memory-management.md  spu_instructions.md
examples/: audio_phase3_demo.rs  ui.rs
src/: main.rs
