[package]
name = "oc-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio system for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
tracing.workspace = true
cpal.workspace = true
parking_lot.workspace = true

[dev-dependencies]
