[package]
name = "oc-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio system for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
tracing.workspace = true
cpal.workspace = true
parking_lot.workspace = true
# AAC decoder support
symphonia = { version = "0.5.4", features = ["aac", "isomp4"] }

[dev-dependencies]
