[package]
name = "oc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core emulator logic for oxidized-cell PS3 emulator"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
bitflags.workspace = true
parking_lot.workspace = true

[dev-dependencies]
