[package]
name = "oc-hle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HLE modules for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-memory.workspace = true
tracing.workspace = true
once_cell.workspace = true
regex = "1.10"

[dev-dependencies]
