[package]
name = "oc-hle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HLE modules for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-input.workspace = true
oc-memory.workspace = true
oc-vfs.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex = "1.10"
miniz_oxide = "0.8"

[dev-dependencies]
