[package]
name = "oc-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ELF/SELF loader for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-memory.workspace = true
tracing.workspace = true
bytemuck.workspace = true
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
serde = { workspace = true }
serde_json.workspace = true
hex = "0.4"

[dev-dependencies]
