[package]
name = "oc-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "User interface for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "ui"
path = "../examples/ui.rs"
