[package]
name = "oc-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "User interface for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-debug.workspace = true
oc-integration.workspace = true
oc-memory.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rfd = "0.15"

[dev-dependencies]
tracing-subscriber.workspace = true
