[package]
name = "oc-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Virtual file system for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
